sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:5: error: not found: value j
      if (plusPetit(j,j+1)==true){
                    ^AlgBubbleSort1:5: error: not found: value j
      if (plusPetit(j,j+1)==true){
                      ^AlgBubbleSort1:6: error: not found: value j
        echange(j,j+1)
                ^AlgBubbleSort1:6: error: not found: value j
        echange(j,j+1)
                  ^