sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var a= getNombreValeurs()
  for(i<-0 to a-2)
      if (plusPetit(j,j+1)==true){
        echange(j,j+1)
      }
    }